# CodingB

./: CodingBuddy.txt  DEVELOPER.md  ENCRYPTION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  OLLAMA_SETUP.md  PHASE0_COMPLETION_SUMMARY.md  PHASE15_SUMMARY.md  PHASE19_TAURI_SIDECAR.md  PHASE6_IMPLEMENTATION.md  README.md  STEP21_HANDOFF_COMPLETE.md  STEP6_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDE.md  acceptance_test.lua  demo_encryption_workflow.lua  diagnose.sh  install.sh  manual_test_phase10.lua  test_crypto.lua  test_crypto_simple.lua  test_fix.lua  test_ollama.lua  test_phase10_ai_connector.lua  test_usage_logging.lua  usage_cli.lua
codingbuddy/: .geanylua  README.md  TASK_MODE.md  TERMINAL_INTEGRATION.md  ai_connector.lua  analyzer.lua  chat_interface.lua  config.lua  config.sample.json  config_validator.lua  conversation_manager.lua  crypto.lua  dialogs.lua  json.lua  main.lua  ops_queue.lua  sentry.lua  sidecar_connector.lua  test_cli.lua  test_search.lua  usage_analyzer.lua  utils.lua
docs/: README.md  USAGE_LOGGING.md  anthropic_enhancements.md  architecture.md  chat_interface.md  run_lint_tool.md
examples/: tool_usage_example.lua
multiapp-sidecar/: README.md  index.html  install.sh  package.json  tailwind.config.js  vite.config.js
multiapp-sidecar/src-tauri/: Cargo.toml  tauri.conf.json
multiapp-sidecar/src-tauri/src/: crypto.rs  events.rs  main.rs  server.rs  state.rs  terminal.rs
tests/: README.md  run_all_tests.lua  test_ai_connector.lua  test_chat_interface.lua  test_crypto.lua  test_fs.lua  test_gtk_capabilities.lua  test_path.lua  (+1 more)
(+16 files in other folders)
